# pathtracer

./: CMakeLists.txt  main.cpp
core/: Camera.cpp  Camera.h  Core.h  Film.cpp  Film.h  Filter.cpp  Filter.h  Geometry.cpp  Geometry.h  ImageExporter.cpp  ImageExporter.h  Intersection.h  Primitive.cpp  Primitive.h  Random.cpp  Random.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  core.h  film.cpp  film.h  filter.cpp  filter.h  geometry.cpp  geometry.h  imageexporter.cpp  imageexporter.h
exporters/: PPMExporter.cpp  PPMExporter.h
filters/: SimpleFilter.cpp  SimpleFilter.h
renderers/: PathTracer.cpp  PathTracer.h
shapes/: Sphere.cpp  Sphere.h
